# adventofcode

./: .gitignore  common.rb  ex1.rb  ex2.rb  ex3.rb  ex4.rb
1/: ex1.rb
2/: ex2.rb
2015/: Cargo.toml
2015/1/: Cargo.toml
2015/1/src/: ex1.rs  main.rs
2015/10/src/: main.rs
2015/2/src/: main.rs
2015/3/src/: main.rs
2015/4/src/: main.rs
2015/5/src/: main.rs
2015/6/src/: main.rs
2015/7/src/: main.rs
2015/lib/advent_of_code/: Cargo.toml
2015/lib/advent_of_code/src/: lib.rs
2015/lib/adventofcode/: Cargo.toml
2015/lib/adventofcode/src/: adventofcode.rs
2018/2/: ex2.rb
2018/3/: ex3.rb
2018/5/: ex5.rb
2018/6/: ex6.rb
2018/7/: ex7.rb  ex7_other.rb
2018/8/: ex8.rb
2018/9/: Cargo.toml  ex9.rb
2018/libs/: common.rb
2019/: go.mod
2019/common/: common.go
2020/: Cargo.toml  go.mod
2020/1/a/: a.go  a.rs
2020/1/b/: b.go  b.rs
2020/10/a/: a.go
2020/11/a/: a.go
2020/11/b/: b.go
2020/2/a/: a.go  a.rs
2020/2/b/: b.go  b.rs
2020/3/a/: a.go  a.rs
2020/3/b/: b.go  b.rs
2020/4/a/: a.go  a.rs
2020/4/b/: b.go  b.rs
2020/5/a/: a.go  a.rs
2020/5/b/: b.go  b.rs
2020/6/a/: a.go  a.rs
2020/6/b/: b.go  b.rs
2020/7/a/: a.go
2020/7/b/: b.go
2020/8/a/: a.go
2020/8/b/: b.go
2020/9/a/: a.go
2020/9/b/: b.go
2020/common/: common.go
2021/: Cargo.toml  go.mod  go.sum
2021/common/: common.go
2022/ex_1/: gleam.toml
2022/ex_2/: README.md  gleam.toml
2022/ex_3/: README.md  gleam.toml
2022/ex_4/: README.md  gleam.toml
2022/ex_5/: README.md  gleam.toml
2022/ex_6/: README.md  gleam.toml
2022/ex_7/: README.md  gleam.toml
2023/: go.sum
3/: ex3.rb
4/: ex4.rb
5/: Gemfile  ex5.rb
6/: ex6.rb
7/: ex7.rb  ex7_other.rb  test.php  test.rb
8/: ex8.rb
libs/: common.rb
(+39 files in other folders)
