[package]
name = "advent_of_code_2015"
version = "0.1.0"
authors = ["Alexandre Del Vecchio <alexandre@delvecch.io>"]
edition = "2018"

[dependencies]
adventofcode = { path = "lib/advent_of_code" }
regex = "1"
byteorder = "1"
md5 = "0.6.1"

[[bin]]
name = "ex1"
path = "1/src/main.rs"
[[bin]]
name = "ex2"
path = "2/src/main.rs"
[[bin]]
name = "ex3"
path = "3/src/main.rs"
[[bin]]
name = "ex4"
path = "4/src/main.rs"
[[bin]]
name = "ex5"
path = "5/src/main.rs"
[[bin]]
name = "ex6"
path = "6/src/main.rs"
[[bin]]
name = "ex7"
path = "7/src/main.rs"
[[bin]]
name = "ex10"
path = "10/src/main.rs"
