[package]
name = "advent_of_code_2020_ex1"
version = "0.1.0"
authors = ["Alexandre Del Vecchio <alexandre@delvecch.io>"]
edition = "2018"

[dependencies]
adventofcode = { path = "../2015/lib/advent_of_code" }
regex = "1"

[[bin]]
name = "ex1_a"
path = "1/b/b.rs"

[[bin]]
name = "ex1_b"
path = "1/b/b.rs"

[[bin]]
name = "ex2_a"
path = "2/a/a.rs"

[[bin]]
name = "ex2_b"
path = "2/b/b.rs"

[[bin]]
name = "ex3_a"
path = "3/a/a.rs"

[[bin]]
name = "ex3_b"
path = "3/b/b.rs"

[[bin]]
name = "ex4_a"
path = "4/a/a.rs"

[[bin]]
name = "ex4_b"
path = "4/b/b.rs"

[[bin]]
name = "ex5_a"
path = "5/a/a.rs"

[[bin]]
name = "ex5_b"
path = "5/b/b.rs"
